# polkadot-account-monitoring

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.circleci/: config.yml
charts/: Chart.yaml  values.yaml
charts/polkadot-account-monitoring/: Chart.yaml  values.yaml
charts/polkadot-account-monitoring/templates/: configmap-accounts.yaml  configmap-config.yaml  configmap.yaml  cronjobs.yaml  deployment.yaml  secret.yaml
charts/templates/: configmap.yaml  cronjobs.yaml  secret.yaml
config/: sample.accounts.yml  sample.config.yml
helmfile.d/: 05-mongodb.yaml  10-monitor.yaml  20-collection.yaml
helmfile.d/config/: mongodb.yaml.gotmpl  monitor.yaml.gotmpl
scripts/: integration-tests.sh
src/: chain_api.rs  core.rs  database.rs  lib.rs  system.rs
src/publishing/: google_drive.rs  mod.rs
src/reporting/: mod.rs  nominations.rs  rewards_slashes.rs  transfers.rs
