[package]
name = "polkadot-account-monitoring"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
reqwest = "0.11.3"
serde = { version = "1.0.126", features = ["derive"] }
mongodb = "2.0.0-beta.1"
bson = "2.0.0-beta.1"
