[package]
name = "polkadot-account-monitoring"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.8.3"
tokio = "1.6.1"
anyhow = "1.0.40"
reqwest = "0.11.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
mongodb = "2.0.0-beta.1"
bson = "2.0.0-beta.1"
async-trait = "0.1.50"

[dev-dependencies]
rand = "0.8.3"
