[package]
name = "polkadot-account-monitoring"
version = "0.1.6"
edition = "2018"

[lib]
name = "system"
path = "src/lib.rs"

[[bin]]
name = "monitor"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.14", features = ["serde"] }
env_logger = "0.8.3"
tokio = "1.6.1"
anyhow = "1.0.40"
reqwest = "0.11.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
mongodb = { version = "2.0.0-beta.1", features = ["bson-u2i"] }
bson = "2.0.0-beta.1"
async-trait = "0.1.50"
futures = "0.3.15"
google-drive = "0.1.18"
yup-oauth2 = "5.1.0"
chrono = "0.4.19"

[dev-dependencies]
rand = "0.8.3"
